<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/landing_page"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Organizer.NewEventForm">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
         <!-- Page Title -->
        <TextView
            android:id="@+id/page_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-medium"
            android:text="Event Form"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Close Button -->
        <ImageButton
            android:id="@+id/close_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Close"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/page_name"
            app:layout_constraintHorizontal_bias="0.139"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022"
            app:tint="@android:color/black"/>

        <!-- Input Fields Layout -->
        <LinearLayout
            android:id="@+id/input_fields_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/page_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <!-- Event Name Field -->
            <EditText
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_input_field_shape"
                android:hint="Event Name"
                android:paddingHorizontal="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/blueGrey"
                android:textSize="16sp" />
            <!-- Location Field -->
            <Spinner
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_input_field_shape"
                android:hint="Location"
                android:paddingHorizontal="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/blueGrey"
                android:textSize="16sp" />

            <!-- Choose Date Field with Calendar Icon -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:background="@drawable/text_input_field_shape">
                <EditText
                    android:id="@+id/choose_date"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:focusableInTouchMode="true"
                    android:hint="Choose Date"
                    android:inputType="date"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/blueGrey"
                    android:textSize="16sp"
                    android:background="@null"
                    android:focusable="false"
                    android:clickable="true"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:src="@drawable/calendar_icon"
                    android:contentDescription="Calendar Icon" />
            </LinearLayout>

            <!-- Choose Time Field with Clock Icon -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:background="@drawable/text_input_field_shape">
                <EditText
                    android:id="@+id/choose_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:focusableInTouchMode="true"
                    android:hint="Choose Time"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/blueGrey"
                    android:textSize="16sp"
                    android:background="@null"
                    android:focusable="false"
                    android:clickable="true"
                    android:inputType="none"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="Clock Icon"
                    android:padding="16dp"
                    tools:srcCompat="@drawable/clock_icon" />
            </LinearLayout>

            <!-- Waiting List Capacity Field -->
            <EditText
                android:id="@+id/waiting_list_capacity"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_input_field_shape"
                android:hint="Event Capacity (Optional)"
                android:paddingHorizontal="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/blueGrey"
                android:textSize="16sp" />

            <!-- Open for Registration Until Field with Calendar Icon -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:background="@drawable/text_input_field_shape">
                <EditText
                    android:id="@+id/registration_until"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:focusableInTouchMode="true"
                    android:clickable="true"
                    android:hint="Open for registration until"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/blueGrey"
                    android:textSize="16sp"
                    android:background="@null"
                    android:focusable="false"/>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:src="@drawable/calendar_icon"
                    android:contentDescription="Calendar Icon" />
            </LinearLayout>

            <!-- Attendee Sample Number Field -->
            <EditText
                android:id="@+id/attendee_sample_num"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_input_field_shape"
                android:hint="Number of Attendees to Sample"
                android:paddingHorizontal="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/blueGrey"
                android:textSize="16sp" />

        </LinearLayout>

        <!-- Next Button -->
        <Button
            android:id="@+id/next_button"
            android:layout_width="170dp"
            android:layout_height="69dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/lightBrown"
            android:paddingHorizontal="40dp"
            android:paddingVertical="15dp"
            android:text="Next"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_fields_container"
            app:layout_constraintVertical_bias="0.589" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>