...
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <!-- Go Back button -->
    <ImageButton
        android:id="@+id/go_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Go Back"
        android:src="@drawable/ic_go_back"
        android:padding="10dp"
...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- For attendee -->
    <!-- Share button -->
    <ImageButton
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Share"
        android:src="@drawable/icon_share"
        android:padding="10dp"
...
        app:layout_constraintTop_toBottomOf="@id/share_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <!-- Edit button -->
    <ImageButton
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Edit"
        android:src="@drawable/ic_notifications"
        android:padding="10dp"
...
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/lightBrown"
            android:text="Enter the Lottery"
            android:visibility="visible"/>

        <Button
            android:id="@+id/draw_lottery"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/lightBrown"
            android:text="Draw the Lottery"
...
