...
        android:textColor="#333333"
        android:textColorHint="#888888"
        android:textSize="14sp" />

    <!-- Upload Event Poster Button -->
    <Button
        android:id="@+id/upload_poster_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/shadedGrey"
        android:drawableTop="@android:drawable/ic_menu_upload"
...
        android:text="Upload a poster"
        android:textColor="#333333"
        android:textSize="14sp" />

    <!-- Create Event Button -->
    <Button
        android:id="@+id/create_event_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/lightBrown"
        android:paddingVertical="14dp"
        android:text="Save changes"
...
